Added home image

--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
                 <a class="nav-link active" aria-current="page" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link active" href="#">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link active" href="#">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
+
+      <!-- Main image -->
+      <img src="home_page_image.webp" class="img-fluid" alt="Dentist with happy client.">
     
 </body>
 </html>
