--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand fs-3" href="#">TeeKay Dental</a> <!-- title -->
+          <a class="navbar-brand fs-3 --bs-primary" href="#">TeeKay Dental</a> <!-- title -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About</a>
+                <a class="nav-link active --bs-primary" aria-current="page" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Services</a>
+                <a class="nav-link active --bs-primary" href="#">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Contact</a>
+                <a class="nav-link active --bs-primary" href="#">Contact</a>
               </li>
             </ul>
           </div>
@@ -33,7 +33,7 @@
       </nav>
 
       <!-- Main image -->
-      <img src="home_page_image.webp" class="img-fluid" alt="Dentist with happy client.">
+      <img src="home_page_image.jpg" class="img-fluid" alt="Dentist with happy client.">
     
 </body>
 </html>
