--- a/index.html
+++ b/index.html
@@ -6,34 +6,90 @@
     <title>TeeKay Dental</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheet.css">
+
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <header></header>
+
+    <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
-          <a class="navbar-brand fs-3 --bs-primary" href="#">TeeKay Dental</a> <!-- title -->
+          <a class="navbar-brand fs-1 ms-3" href="index.html">TeeKay Dental</a> <!-- title -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active --bs-primary" aria-current="page" href="#">About</a>
+                <a class="nav-link active fs-5" aria-current="page" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active --bs-primary" href="#">Services</a>
+                <a class="nav-link active fs-5" href="#">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active --bs-primary" href="#">Contact</a>
+                <a class="nav-link active fs-5" href="#">Contact</a>
               </li>
             </ul>
           </div>
         </div>
+        <button type="button" class="bookAppointment btn btn-lg float-end me-4">Book Appointment</button>
       </nav>
 
-      <!-- Main image -->
-      <img src="home_page_image.jpg" class="img-fluid" alt="Dentist with happy client.">
+      <div>
+        <div class="mainImage"></div>
+
+        <h1 class="slogal display-1 fw-bold text-white">Your smile deserves<br>the best!</h1>
+        <p class="fw-bold text-white fs-5" 
+            style="
+            position: absolute;
+            top: 610px;
+            left: 200px;
+            ">
+            We are always accepting new patients!
+        </p>
+        <button type="button" class="bookAppointment btn btn-lg float-end me-4"
+          style="
+          position: absolute;
+          top: 700px;
+          left: 200px;
+          ">
+          Book Appointment
+        </button>
+        <p class="fw-bold text-white fs-5" 
+          style="
+          position: absolute;
+          top: 770px;
+          left: 200px;
+          ">
+          Or call 111-111-1111
+        </p>
+      </div>
+
+
+      <div>
+        <h1 class="display-1 fw-bold text-black"
+          style="
+          position: relative;
+          top: 400px;
+          left: 200px;
+          ">Feedback from<br>our patients!
+        </h1>
+        <img src="five_stars.jpg" alt="Five stars" style="position: relative; top: 450px; left: 65px; transform:scale(0.80);">
+
+
+      </div>
+
+
+
+
+
+
+      <footer>
+
+
+      </footer>
     
 </body>
 </html>
