--- a/about.html
+++ b/about.html
@@ -4,10 +4,146 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-    <h1>About</h1>
+
+    <button onclick="scrollToTop()" class="scrollUp" id="scrollUp">&uarr; Top</button>
+    <script> // javascript for scroll up button
+      let scrollUp = document.getElementById("scrollUp"); // identify scroll up button
+
+      window.onscroll = function() {scrollFunction()}; // set function for onScroll event
+
+      function scrollFunction() { // function to be called during onscroll event
+        if (document.documentElement.scrollTop > 20) { // check if user scrolled 20 pixels
+          scrollUp.style.display = "block";
+        } else {
+          scrollUp.style.display = "none";
+        }
+      }
+      function scrollToTop() {
+        document.documentElement.scrollTop = 0; // scroll to top
+      }
+    </script>
+
+    <nav class="navbar navbar-expand-lg bg-white">
+        <div class="container-fluid">
+          <a class="navbar-brand fs-1 ms-3" href="index.html" style="font-family: Georgia, serif;">TeeKay Dental</a> <!-- title -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active fs-5" aria-current="page" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active fs-5" onClick="goToServices()">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active fs-5" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <button type="button" class="bookAppointment btn btn-lg float-end me-4">Book Appointment</button>
+      </nav>
+      <script>
+        function goToServices() {
+            window.location.href = 'index.html?scrollTo=services'; // set url param to services
+        }
+      </script>
+
+
+    <div class="card mb-3 mt-5" style="max-width: 100%; border: none; background: rgb(245, 245, 245);">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <div class="card-body ms-5 mt-4">
+                <h2 class="card-title mb-4">About Us</h2>
+                <p class="card-text mb-5">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt porta tortor, et blandit velit pharetra tristique. Praesent ac purus purus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus ipsum nisl, aliquam sit amet erat at, malesuada tempor tortor. Morbi id rhoncus enim, at ultricies tellus. Nam mollis turpis id ipsum commodo dignissim. Cras in magna eu augue ultricies blandit. Nulla facilisi. Sed cursus dictum tellus quis consequat. Nunc a nibh sed neque semper elementum. Nulla efficitur, nunc in auctor tincidunt, tellus orci faucibus purus, in tristique risus orci nec mauris.
+                </p>
+              </div>
+          </div>
+          <div class="col-md-8">
+            <img src="assets/dental_team.jpeg" class="img-fluid rounded-start w-75 float-end me-5" style="position:relative; top:6.5%" alt="team">
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+      <div style="
+      position: relative;
+      top: 100px;
+      ">
+        <div">
+          <h1 class="display-3 fw-bold text-black d-flex justify-content-center">Meet our experts!
+        </h1>
+
+      <div class="container-fluid d-flex justify-content-center" style="padding-top: 40px; width: 70%">
+        <div class="row">
+          <div class="col-md-5 col-lg-4 col-sm-4 py-4 px-4">
+            <div class="card">
+              <img src="assets/expert.jpeg" class="card-img-top" alt="Cleaning">
+              <div class="card-body">
+                <h5 class="card-title">Dr John Doe</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-5 col-lg-4 col-sm-4 py-4 px-4">
+            <div class="card">
+              <img src="assets/expert.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-5 col-lg-4 col-sm-4 py-4 px-4">
+            <div class="card">
+              <img src="assets/expert.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-5 col-lg-4 col-sm-4 py-4 px-4">
+            <div class="card">
+              <img src="assets/expert.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-5 col-lg-4 col-sm-4 py-4 px-4">
+            <div class="card">
+              <img src="assets/expert.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-5 col-lg-4 col-sm-4 py-4 px-4">
+            <div class="card">
+              <img src="assets/expert.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+        </div>
     
 </body>
 </html>
