--- a/about.html
+++ b/about.html
@@ -30,36 +30,35 @@
       }
     </script>
 
-    <nav class="navbar navbar-expand-lg bg-white">
-        <div class="container-fluid">
-          <a class="navbar-brand fs-1 ms-3" href="index.html" style="font-family: Georgia, serif;">TeeKay Dental</a> <!-- title -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active fs-5" aria-current="page" href="about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active fs-5" onClick="goToServices()">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active fs-5" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-expand-lg bg-white fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand fs-1 ms-3" href="index.html" style="font-family: Georgia, serif;">TeeKay Dental</a> <!-- title -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active fs-5" aria-current="page" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active fs-5" onClick="document.getElementById('services').scrollIntoView();">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active fs-5" href="contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
-        <a href="bookingPage.html"><button type="button" class="bookAppointment btn btn-lg float-end me-4">Book Appointment</button></a>
-      </nav>
+      </div>
+      <a href="bookingPage.html"><button type="button" class="bookAppointment btn btn-lg float-end me-4">Book Appointment</button></a>
+    </nav>
       <script>
         function goToServices() {
             window.location.href = 'index.html?scrollTo=services'; // set url param to services
         }
       </script>
 
-
-    <div class="card mb-3 mt-5" style="max-width: 100%; border: none; background: rgb(245, 245, 245);">
+    <div class="card mb-3 mt-5 pt-5" style="max-width: 100%; border: none; background: rgb(245, 245, 245);">
         <div class="row g-0">
           <div class="col-md-3">
             <div class="card-body ms-5 mt-4">
@@ -74,10 +73,6 @@
           </div>
         </div>
       </div>
-
-
-
-
 
       <div style="
       position: relative;
@@ -130,70 +125,6 @@
           </div>
         </div>
       </div>
-
-
-      <!-- <div class="container" style="width: 70%; margin:auto;">
-        <div>
-          <h1 class="display-3 fw-bold text-black d-flex justify-content-center">Meet our experts!
-        </h1>
-        <div class="row d-flex justify-content-center">
-          <div class="col-md-3 py-4 px-4">
-            <div class="card">
-              <img src="assets/expert.jpeg" class="expertPic card-img-top" alt="Cleaning">
-              <div class="card-body">
-                <h5 class="card-title">Dr John Doe</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 py-4 px-4">
-            <div class="card">
-              <img src="assets/expert.jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 py-4 px-4">
-            <div class="card">
-              <img src="assets/expert.jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row d-flex justify-content-center">
-          <div class="col-md-3 py-4 px-4">
-            <div class="card">
-              <img src="assets/expert.jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 py-4 px-4">
-            <div class="card">
-              <img src="assets/expert.jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 py-4 px-4">
-            <div class="card">
-              <img src="assets/expert.jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-        </div> -->
     
 </body>
 </html>
