--- a/bookingPage.html
+++ b/bookingPage.html
@@ -47,8 +47,8 @@
 
 
 
-      <div style="margin: auto; width: 50%;" id="patientInfo">
-        <h3>Patient Info</h3>
+      <div style="margin: auto; width: 30%;" id="patientInfo">
+        <h3 class="mb-4">Patient Info</h3>
         <label for="PatientName" class="form-label fw-bold">Patient Name</label>
         <div class="input-group mb-3" id="PatientName">
           <input type="text" class="form-control" placeholder="First name" aria-label="First name" aria-describedby="basic-addon1">
@@ -57,9 +57,14 @@
 
         <label for="patientEmail" class="form-label fw-bold">Patient Email</label>
         <div class="input-group mb-3" id="patientEmail">
-          <input type="text" class="form-control" placeholder="Patient Email" aria-label="Patient Email" aria-describedby="basic-addon2">
-          <span class="input-group-text" id="basic-addon2">@example.com</span>
+          <input type="text" class="form-control" placeholder="Patient Email" aria-label="Patient Email">
         </div>
+
+        <label for="dob" class="form-label fw-bold">Patient Date of Birth</label>
+        <div class="cs-form mb-3" id="dob">
+          <input type="date" class="form-control" />
+        </div>
+      
 
         <div class="row d-flex justify-content-center pt-4">
           <div class="col-auto">
@@ -81,13 +86,74 @@
               </label>
             </div>
           </div>
+        </div>
 
+        <div class="row pt-4">
+          <div class="col-auto" style="display: flex; align-items: center;">
+            <h6 class="me-2">Are you, or the person you're booking for, under 18?</h6><img src="assets/info-circle.svg" alt="help" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#ageInfo">
+          </div>
+
+          <!-- modal for info circle -->
+          <div class="modal fade" id="ageInfo" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3 class="modal-title fs-5" id="exampleModalLabel">Are you, or the person you're booking for, under 18?</h3>
+                </div>
+                <div class="modal-body">
+                  Any patient under 18 gets a 25% discount on all services!
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-auto">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="yes">
+              <label class="form-check-label" for="yes">
+                Yes
+              </label>
+            </div>
+          </div>
+          <div class="col-auto">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="no" checked>
+              <label class="form-check-label" for="no">
+                No
+              </label>
+            </div>
+          </div>
         </div>
 
 
+      </div>  
+
+      <div style="margin: auto; width: 30%;" id="appointmentInfo">
+        <h3 class="mt-5 mb-4">Appointment Info</h3>
+
+        <select class="form-select mb-3" aria-label="services">
+          <option selected>Services</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+
+        <label for="date" class="form-label fw-bold">Date and Time of Appointment</label>
+        <div class="input-group mb-3" id="dateAndTime">
+          <input type="date" class="form-control" id="date" />
+          <input type="time" class="form-control" id="time" />
+        </div>
       </div>
 
-      
+      <div style="margin-top: 80px;">
+        <button type="button" class="submit btn btn-lg">Submit</button>
+      </div>
+
+
 
 
 </body>
