--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a class="nav-link active fs-5" style="cursor: pointer;" onClick="document.getElementById('services').scrollIntoView();">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active fs-5" href="contact.html">Contact</a>
+                <a class="nav-link active fs-5" style="cursor: pointer;" onclick="document.getElementById('footer').scrollIntoView();">Contact</a>
               </li>
             </ul>
           </div>
@@ -93,64 +93,11 @@
         </p>
       </div>
 
-
-      <div style="
-        position: relative;
-        top: 400px;
-        left: 280px;
-        ">
-        <h1 class="display-2 fw-bold text-black">Feedback from<br>our patients!
-        </h1>
-        <img src="assets/five_stars.jpg" alt="Five stars" style="transform:scale(0.80); position:absolute; left:-150px;">
-      </div>
-
-      <div class="feedback card" style="
-        width: 25rem;
-        height: 20rem;
-        position: relative;
-        left: 1400px;
-        background-color: #D2EEF2;
-        border: none;
-        border-radius: 10%;
-        ">
-        <div class="card-body" style="width: 90%; padding: 50px 0 0 20px;">
-          <p class="card-text" style="font-size: 25px;">I love TeeKay Dental! They saved my life!<br><br>-Rynak</p>
-        </div>
-      </div>
-
-      <div class="feedback card" style="
-        width: 25rem;
-        height: 20rem;
-        position: relative;
-        left: 2000px;
-        background-color: #e3d4f1;
-        border: none;
-        border-radius: 10%;
-        ">
-        <div class="card-body" style="width: 90%; padding: 50px 0 0 20px;">
-          <p class="card-text" style="font-size: 25px;">I look forward to my appointment every month!<br><br>-Bob</p>
-        </div>
-      </div>
-
-      <div class="feedback card" style="
-      width: 25rem;
-      height: 20rem;
-      position: relative;
-      left: 1400px;
-      background-color: #d4f1ee;
-      border: none;
-      border-radius: 10%;
-      ">
-        <div class="card-body" style="width: 90%; padding: 50px 0 0 20px;">
-          <p class="card-text" style="font-size: 25px;">My life would be incomplete without TeeKay Dental!<br><br>-Jessica</p>
-        </div>
-      </div>
-
       <div id="services"></div>
 
-      <div class="container" style="position:relative; top: 300px;">
+      <div class="container" style="position:relative; top: 200px;">
         <div class="services">
-          <h1 class="display-2 fw-bold text-black d-flex justify-content-center">What services do we offer?</h1>
+          <h1 class="display-2 fw-bold text-black d-flex justify-content-center mb-5">What services do we offer?</h1>
           <div class="row d-flex justify-content-center">
             <div class="col-md-4 py-4 px-4">
               <div class="card">
@@ -218,13 +165,8 @@
       </div>
       </div>
 
-      
-    
-
-
-
-
-      <div style="background-color: #4CA6B3; position:relative; top:500px;">
+      <!-- footer -->
+      <div style="background-color: #4CA6B3; position:relative; top:500px;" id="footer">
         <footer class="row py-5 my-5" style="width:80%; margin:auto;">
           <div class="col mb-3">
               <h5 class="text-white">Contact Us</h5>
