--- a/index.html
+++ b/index.html
@@ -101,31 +101,31 @@
           <div class="row d-flex justify-content-center">
             <div class="col-md-4 py-4 px-4">
               <div class="card">
-                <img src="assets/services_images/cleaning.jpeg" class="card-img-top" alt="Cleaning">
-                <div class="card-body">
-                  <h5 class="card-title">General Check Up</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="bookingPage.html" class="btn cardBookAppointment">Book Appointment</a>
+                <img src="assets/services_images/general.jpg" class="card-img-top" alt="Cleaning">
+                <div class="card-body d-flex flex-column justify-content-between" style="height: 200px;">
+                  <h5 class="card-title">General Check-Up - $50</h5>
+                  <p class="card-text">Ensure your oral health is in top shape with one of our experts.</p>
+                  <a href="bookingPage.html?service=General" class="btn cardBookAppointment">Book Appointment</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 py-4 px-4">
+              <div class="card">
+                <img src="assets/services_images/fillings.jpg" class="card-img-top" alt="...">
+                <div class="card-body d-flex flex-column justify-content-between" style="height: 200px;">
+                  <h5 class="card-title">Fillings - $200</h5>
+                  <p class="card-text">Repair cavities and minor toth damage.</p>
+                  <a href="bookingPage.html?service=Fillings" class="btn cardBookAppointment">Book Appointment</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4 py-4 px-4">
               <div class="card">
                 <img src="assets/services_images/cleaning.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Fillings and Repairs</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="bookingPage.html" class="btn cardBookAppointment">Book Appointment</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 py-4 px-4">
-              <div class="card">
-                <img src="assets/services_images/cleaning.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Cleaning</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="bookingPage.html" class="btn cardBookAppointment">Book Appointment</a>
+                <div class="card-body d-flex flex-column justify-content-between" style="height: 200px;">
+                  <h5 class="card-title">Cleaning - $80</h5>
+                  <p class="card-text">Maintain a fresh and healthy smile, where our experts will remove plaque, tartar, and stains to prevent cavities and gum diseases.</p>
+                  <a href="bookingPage.html?service=Cleaning" class="btn cardBookAppointment">Book Appointment</a>
                 </div>
               </div>
             </div>
@@ -133,31 +133,31 @@
         <div class="row d-flex justify-content-center">
           <div class="col-md-4 py-4 px-4">
             <div class="card">
-              <img src="assets/services_images/cleaning.jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cosmetic Procedure</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="bookingPage.html" class="btn cardBookAppointment">Book Appointment</a>
+              <img src="assets/services_images/cosmetic.jpg" class="card-img-top" alt="...">
+              <div class="card-body d-flex flex-column justify-content-between" style="height: 200px;">
+                <h5 class="card-title">Cosmetic Procedure - $200 to $2000</h5>
+                <p class="card-text">Consult one of our experts to transform your smile and boost your confidence!</p>
+                <a href="bookingPage.html?service=Cosmetic" class="btn cardBookAppointment">Book Appointment</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 py-4 px-4">
             <div class="card">
-              <img src="assets/services_images/cleaning.jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="bookingPage.html" class="btn cardBookAppointment">Book Appointment</a>
+              <img src="assets/services_images/dentures.webp" class="card-img-top" alt="...">
+              <div class="card-body d-flex flex-column justify-content-between" style="height: 200px;">
+                <h5 class="card-title">Dentures - $1500</h5>
+                <p class="card-text">Regain the function and appearnnce of your smile with a pair of high quality dentures, designed by us.</p>
+                <a href="bookingPage.html?service=Dentures" class="btn cardBookAppointment">Book Appointment</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 py-4 px-4">
             <div class="card">
-              <img src="assets/services_images/cleaning.jpeg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="bookingPage.html" class="btn cardBookAppointment">Book Appointment</a>
+              <img src="assets/services_images/extraction.webp" class="card-img-top" alt="...">
+              <div class="card-body d-flex flex-column justify-content-between" style="height: 200px;">
+                <h5 class="card-title">Extractions - $100</h5>
+                <p class="card-text">A swift and painless procedure done by our team of experts to address tooth decay, wisdom teeth, or broken/fractured teeth.</p>
+                <a href="bookingPage.html?service=Extractions" class="btn cardBookAppointment">Book Appointment</a>
               </div>
             </div>
           </div>
