--- a/about.html
+++ b/about.html
@@ -58,21 +58,31 @@
         }
       </script>
 
-    <div class="card mb-3 mt-5 pt-5" style="max-width: 100%; border: none; background: rgb(245, 245, 245);">
+    <div class="card mb-3 mt-5 pt-5 mb-5 mx-auto" style="max-width: 80%; border: none;">
         <div class="row g-0">
           <div class="col-md-3">
             <div class="card-body ms-5 mt-4">
                 <h1 class="card-title mb-4">About Us</h1>
-                <p class="card-text mb-5" style="font-size: 20px;">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt porta tortor, et blandit velit pharetra tristique. Praesent ac purus purus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus ipsum nisl, aliquam sit amet erat at, malesuada tempor tortor. Morbi id rhoncus enim, at ultricies tellus. Nam mollis turpis id ipsum commodo dignissim. Cras in magna eu augue ultricies blandit. Nulla facilisi. Sed cursus dictum tellus quis consequat. Nunc a nibh sed neque semper elementum. Nulla efficitur, nunc in auctor tincidunt, tellus orci faucibus purus, in tristique risus orci nec mauris.
+                <p class="card-text mb-5" style="font-size: 20px; width: 150%;">
+                  At TeeKay Dental, we are dedicated to providing exceptional dental care
+                  to our patients in a warm and welcoming environment. With a
+                  commitment to excellence, our team of experienced dentists, hygienists,
+                  and staff strive to deliver the best service tailored to meet
+                  the needs of each individual. Utilizing the latest advancements in dental
+                  technology and techniques, we offer a wide range of services including General Check-Ups,
+                  Cosmetic Surgeries, Fillings, and more. Our goal is to empower our patients with the
+                  knowledge and tools they need to achieve and maintain optimal oral health for a lifetime. Whether
+                  you're due for a routine check-up or seeking to enhance your smile, we are here to serve you with compassion,
+                  integrity, and professionalism. Welcome to TeeKay Dental, where your smile is our priority.
                 </p>
               </div>
           </div>
           <div class="col-md-8">
-            <img src="assets/dental_team.jpeg" class="img-fluid rounded-start w-75 float-end me-5" alt="team">
+            <img src="assets/dental_team.jpeg" class="img-fluid rounded-start w-75 float-end" alt="team">
           </div>
         </div>
       </div>
+      <div style="border-bottom: 2px solid black; width: 80%; margin-bottom: 1rem; margin:auto;"></div>
 
       <div style="
       position: relative;
