--- a/about.html
+++ b/about.html
@@ -58,12 +58,12 @@
         }
       </script>
 
-    <div class="card mb-3 mt-5 pt-5 mb-5 mx-auto" style="max-width: 80%; border: none;">
+    <div class="card mb-3 mt-5 pt-5 mb-5 mx-auto" style="border: none;">
         <div class="row g-0">
           <div class="col-md-3">
             <div class="card-body ms-5 mt-4">
                 <h1 class="card-title mb-4">About Us</h1>
-                <p class="card-text mb-5" style="font-size: 20px; width: 150%;">
+                <p class="card-text mb-5" style="font-size: 20px; width: 170%;">
                   At TeeKay Dental, we are dedicated to providing exceptional dental care
                   to our patients in a warm and welcoming environment. With a
                   commitment to excellence, our team of experienced dentists, hygienists,
@@ -78,7 +78,7 @@
               </div>
           </div>
           <div class="col-md-8">
-            <img src="assets/dental_team.jpeg" class="img-fluid rounded-start w-75 float-end" alt="team">
+            <img src="assets/dental_team.jpeg" class="img-fluid rounded-start w-75 float-end" style="position: relative; top: 20%;" alt="team">
           </div>
         </div>
       </div>
@@ -99,8 +99,8 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title">Dr John Doe</h4>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h3 class="card-title">Dr John Doe</h3>
+                  <p class="card-text" style="font-size: 18px;">Dr John Doe brings over 20 years of experience to the table, with a Dentistry degree from the University of Ottawa. As our head dentist, he ensures our clinic brings the best care for any client that needs help.</p>
                 </div>
               </div>
             </div>
@@ -113,8 +113,8 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title">Dr Tam On</h4>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h3 class="card-title">Dr Tam On</h3>
+                  <p class="card-text" style="font-size: 18px;">Dr Tam On brings over 2 years of experience to the table, with a Dentistry degree from the University of Ottawa. Working directly under Dr John Doe, he can ensure anyone under his care is brought the best results, despite the severity of the problem.</p>
                 </div>
               </div>
             </div>
@@ -127,8 +127,8 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h4 class="card-title">Dr Tazim Khan</h4>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h3 class="card-title">Dr Tazim Khan</h3>
+                  <p class="card-text" style="font-size: 18px;">Dr Tazim Khan brings over 10 years of experience to the table, with a Dentistry degree from the University of Ottawa. Working directly under Dr John Doe, he can ensure anyone under his care is brought the best results, despite the severity of the problem.</p>
                 </div>
               </div>
             </div>
