--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       }
     </script>
 
-    <nav class="navbar navbar-expand-lg bg-white fixed-top">
+    <nav class="navbar navbar-expand-lg bg-white">
       <div class="container-fluid">
         <a class="navbar-brand fs-1 ms-3" href="index.html" style="font-family: Georgia, serif;">TeeKay Dental</a> <!-- title -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
