--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         }
       </script>
 
-    <div class="card mb-3 mt-5 pt-5 mb-5 mx-auto" style="border: none;">
+    <div class="card mb-3 mt-2 mb-5 mx-auto" style="border: none;">
         <div class="row g-0">
           <div class="col-md-3">
             <div class="card-body ms-5 mt-4">
