--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         }
       </script>
 
-    <div class="card mb-3 mt-2 mb-5 mx-auto" style="border: none;">
+    <div class="card mb-3 mt-3 mb-5 mx-auto" style="border: none;">
         <div class="row g-0">
           <div class="col-md-3">
             <div class="card-body ms-5 mt-4">
@@ -78,16 +78,19 @@
               </div>
           </div>
           <div class="col-md-8">
-            <img src="assets/dental_team.jpeg" class="img-fluid rounded-start w-75 float-end" style="position: relative; top: 20%;" alt="team">
+            <img src="assets/dental_team.jpeg" class="img-fluid rounded-start float-end mb-5" style="width: 75%;" alt="team">
           </div>
         </div>
       </div>
+
       <div style="border-bottom: 2px solid black; width: 80%; margin-bottom: 1rem; margin:auto;"></div>
+
 
       <div style="
       position: relative;
       top: 100px;
       ">
+
       <h1 class="display-3 fw-bold text-black d-flex justify-content-center mb-5">Meet our experts!</h1>
 
       <div class="container d-flex justify-content-center">
