--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
       </script>
 
     <div class="card mb-3 mt-3 mb-5 mx-auto" style="border: none;">
-        <div class="row g-0">
+        <div class="row g-0  d-flex align-items-center">
           <div class="col-md-3">
             <div class="card-body ms-5 mt-4">
                 <h1 class="card-title mb-4">About Us</h1>
